--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     And Due to This Curiosity, I Decided To Study Computer Science After My High School.
                   </p>
                   <p class="lead">
-                    Basically, I Belongs Sagar (Madhya Pradesh), Pursuing B.Tech CSE From AIST Affiliated By RGPV Bhopal
+                    Basically, I Belongs to Sagar (Madhya Pradesh), Pursuing B.Tech CSE From AIST Affiliated By RGPV Bhopal
                     (Madhya Pradesh)
                     There are 19 Members In My Joint Family & My Father is a Cable-Provider.
                   </p>
