--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Rahul Sahu</title>
+  <title>Durgesh Yaduwanshi</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -33,7 +33,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">Rahul Sahu</a>
+      <a class="navbar-brand js-scroll" href="#page-top">Durgesh Yaduwanshi</a>
       <span id="timee"></span>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,8 +71,8 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">I am Rahul Sahu</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Python Developer,Web Developer,Web Designer,Frontend
+          <h1 class="intro-title mb-4">I am Durgesh Yaduwanshi</h1>
+          <p class="intro-subtitle"><span class="text-slider-items">Laravel Developer,Web Developer,Web Designer,Backend
               Developer,Graphic Designer,Video Editor</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
@@ -96,10 +96,10 @@
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Rahul Sahu</span></p>
-                      <p><span class="title-s">Profile: </span> <span>Python developer</span></p>
-                      <p><span class="title-s">Email: </span> <span>Rahul.sahuji32@gmail.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>+91 6264620522</span></p>
+                      <p><span class="title-s">Name: </span> <span>Durgesh Yaduwanshi</span></p>
+                      <p><span class="title-s">Profile: </span> <span>Laravel + Shopify Developer</span></p>
+                      <p><span class="title-s">Email: </span> <span>durgeshyaduwanshi15.dy@gmail.com</span></p>
+                      <p><span class="title-s">Phone: </span> <span>+91 9644164396</span></p>
                     </div>
                   </div>
                 </div>
@@ -115,14 +115,24 @@
                     <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>JAVASCRIPT</span> <span class="pull-right">50%</span>
+                  <span>JAVASCRIPT</span> <span class="pull-right">75%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>PYTHON</span> <span class="pull-right">90%</span>
+                  <span>PHP</span> <span class="pull-right">90%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>Shopify</span> <span class="pull-right">70%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="90" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>Vue.js</span> <span class="pull-right">75%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
