--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am Durgesh Yaduwanshi</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Laravel Developer,Web Developer,Web Designer,Backend
-              Developer,Graphic Designer,Video Editor</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Web Developer,Web Designer,PHP Laravel Developer,Backend Developer,Blog Auditer, Video Editor</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -97,7 +96,7 @@
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Durgesh Yaduwanshi</span></p>
-                      <p><span class="title-s">Profile: </span> <span>Laravel + Shopify Developer</span></p>
+                      <p><span class="title-s">Profile: </span> <span>PHP Laravel Developer</span></p>
                       <p><span class="title-s">Email: </span> <span>durgeshyaduwanshi15.dy@gmail.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>+91 9644164396</span></p>
                     </div>
@@ -115,6 +114,11 @@
                     <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
+                  <span>Bootstrap</span> <span class="pull-right">75%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
                   <span>JAVASCRIPT</span> <span class="pull-right">75%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0"
@@ -125,7 +129,17 @@
                     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>Shopify</span> <span class="pull-right">70%</span>
+                  <span>Shopify</span> <span class="pull-right">65%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="90" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>Laravel</span> <span class="pull-right">70%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="90" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>C.I</span> <span class="pull-right">70%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
@@ -151,7 +165,7 @@
                     And Due to This Curiosity, I Decided To Study Computer Science After My High School.
                   </p>
                   <p class="lead">
-                    Basically, I Belongs to Sagar (Madhya Pradesh), Pursuing B.Tech CSE From AIST Affiliated By RGPV Bhopal
+                    Basically, I Belongs to Seoni Malwa, Dist. - Hoshangabad (Madhya Pradesh), Pursuing MCA CSE From AIST Affiliated By RGPV Indore
                     (Madhya Pradesh)
                     There are 19 Members In My Joint Family & My Father is a Cable-Provider.
                   </p>
@@ -249,7 +263,7 @@
             <div class="service-content">
               <h2 class="s-title">Graphic Design</h2>
               <p class="s-description text-center">
-                I Am Designing Since 2015, When I Got My First PC.
+                I Am Designing Since 2016, When I Got My First PC.
               </p>
             </div>
           </div>
@@ -282,8 +296,8 @@
               <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">3</p>
-              <span class="counter-text">MINI PROJECTS COMPLETED</span>
+              <p class="counter">8</p>
+              <span class="counter-text"> PROJECTS COMPLETED</span>
             </div>
           </div>
         </div>
@@ -491,16 +505,16 @@
                       CONTACT US For Any Project Related Queries.
                     </p>
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> Vijay Talkies Road, Sagar Madhya Pradesh</li>
-                      <li><span class="ion-ios-telephone"></span> +91 6264620522</li>
-                      <li><span class="ion-email"></span> Rahul.sahuji32@gmail.com</li>
+                      <li><span class="ion-ios-location"></span> Patel Bag Colony Vijay Nagar Indore, Madhya Pradesh</li>
+                      <li><span class="ion-ios-telephone"></span> +91 9644164396</li>
+                      <li><span class="ion-email"></span> Durgeshyaduwanshi15.dy@gmail.com</li>
                     </ul>
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href="https://www.facebook.com/people/Rahul-Sahu/100046430422988"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
-                      <li><a href="https://www.instagram.com/rahulsahuu.rs/"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                      <li><a href="https://github.com/rahulsahurs"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
+                      <li><a href="#"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
+                      <li><a href="https://www.instagram.com/durgesh_yadu1c/"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
+                      <li><a href="#"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
@@ -515,7 +529,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="copyright-box">
-              <p class="copyright">&copy; Copyright <strong>Rahul Sahu | Rs</strong>. All Rights Reserved</p>
+              <p class="copyright">&copy; Copyright <strong>Durgesh Yaduwanshi | </strong>. All Rights Reserved</p>
               <div class="credits">
               </div>
             </div>
