--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
                     And Due to This Curiosity, I Decided To Study Computer Science After My High School.
                   </p>
                   <p class="lead">
-                    Basically, I Belongs to Seoni Malwa, Dist. - Hoshangabad (Madhya Pradesh), Pursuing MCA CSE From AIST Affiliated By RGPV Indore
+                    Basically, I Belongs to Seoni Malwa, Dist. - Hoshangabad (Madhya Pradesh), Pursuing MCA From AIST Affiliated By RGPV Indore
                     (Madhya Pradesh)
-                    There are 19 Members In My Joint Family & My Father is a Cable-Provider.
+                    There are 19 Members In My Joint Family & My Father is a Farmer.
                   </p>
                   <p class="lead">
                     My Hobbies Are Programming, Gymming, Bike-Riding, Gaming & Designing These All are My Strong Points
@@ -247,10 +247,10 @@
               <span class="ico-circle"><i class="ion-stats-bars"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Python</h2>
+              <h2 class="s-title">PHP</h2>
               <p class="s-description text-center">
-                High-level and general-purpose programming language
-                I Uses Tkinter Python For the Development Of GUIs.
+                PHP is a general-purpose scripting language geared towards web Application.
+               <b>Influenced by</b>  Perl, HTML, C, C++, Java[citation needed], Tcl,[2] JavaScript, Hack[6]
               </p>
             </div>
           </div>
